<resources>
    <string name="app_name">ProjectGPIB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tentang">Profil</string>
    <string name="isi_tentang1">GPIB Immanuel Mojokerto dengan gedung yang antik dari semua Gereja yang ada di Kota Madya dan Kabupaten Mojokerto, adalah yang tertua. Tentang tanggal pendiriannya sampai pada saat ini belum ditemukan, namun berdasarkan data-data yang ada bangunan gedungnya terbuat dari rangka-rangka besi kuat yang distel di LONDON – LIVERPOOL (Inggris) oleh ISAC DIXON pada tanggal 31 Agustus 1894. Kemudian diangkut ke INDONESIA MOJOKERTO dipasang sesuai dengan apa yang telah diatur dari sana. Bagian luar atas bangunan ini dihias dengan besi putih yang mahal harganya, membuat seluruh bangunan itu menjadi indah. Rupanya pada zaman penjajahan gedung ini dipergunakan untuk mengatur pemerintahan yang meliputi Mojokerto dan sekitarnya, daerah Lamongan dan Kediri. Disudut halaman sebelah barat masih terlihat gua perlindungan yang dibangun begitu kuat dan tahan lama.
    </string>
    <string name="isi_tentang2">Demikian antiknya sehingga menarik perhatian banyak orang dalam negeri maupun dari luar negeri. Dengan memperhatikan zaman kemajuan, maka selera pelayanan Jemaat pun perlu adanya penyesuaian untuk berkembang maju. Sekian lamanya Jemaat sangat mendambakan pelayanan tetap secara teratur dengan segala daya upaya telah ditempuh. Selama dalam masa kerinduan, jemaat ini diatur/ dilayani oleh Majelis Jemaat GPIB Immanuel Jl. Bubutan 69 Surabaya. Jemaat sering mengalami banyak ketidak-puasan jikalau waktu yang dinantikan untuk acara-acara tertentu tidak dapat dipenuhi oleh petugas dari Surabaya, karena kesibukan mereka disana. Nanti pada bulan Desember 1978 barulah segala kerinduan itu tercapai dengan ditempatkannya seorang tenaga tetap oleh Majelis Sinode GPIB. Tenaga tetap yaitu Vikaris Simon Nisi SM.Th. Diteguhkan menjadi Pendeta jemaat pada tanggal 27 Januari 1974 oleh Pendeta Kustijono Alisumarto S.Th. selaku petugas Majelis Sinode dan dengan jabatannya sebagai Sekretaris I Majelis Sinode periode 1970/1974. Selesai peneguhan yang dihadiri oleh 12 Pendeta dari Mojokerto  dan Surabaya langsung diadakan serah terima dari ketua Majelis yang lama (Penatua Alexander Labibuw) kepada Ketua Majelis Jemaat yang baru (Pendeta Simon Nisi SM.Th.) berdasarkan Ordinansi tentang Majelis Jemaat BAB V – pasal 11 ayat 6, tahun 1972.</string>
    <string name="visimisi">Visi &amp; Misi</string>
    <string name="visi1">GPIB menjadi gereja yang mewujudkan damai sejahtera Allah bagi seluruh ciptaan-Nya.</string>
    <string name="misi1">Menjadi Gereja yang terus menerus diperbaharui dengan bertolak dari Firman Allah, yang terwujud dalam perilaku kehidupan warga gereja, baik dalam persekutuan, maupun dalam hidup bermasyarakat.</string>
    <string name="misi2">Menjadi Gereja yang hadir sebagai contoh kehidupan, yang terwujud melalui inisiatif dan partisipasi dalam kesetiakawanan social serta kerukunan dalam masyarakat, dengan berbasis pada perilaku kehidupan keluarga yang kuat dan sejahtera.</string>
    <string name="misi3">Menjadi Gereja yang membangun keutuhan ciptaan yang terwujud melalui perhatian terhadap lingkungan hidup, semangat keesaan dan semangat persatuan dan kesatuan warga Gereja sebagai warga masyarakat.</string>
</resources>